fix: add z-index for hearder

--- a/src/styles/scss/layout/header.module.scss
+++ b/src/styles/scss/layout/header.module.scss
@@ -8,6 +8,7 @@
   justify-content: space-between;
   align-items: center;
   box-shadow: 0px 0px 10px rgba($color: #000000, $alpha: .3);
+  z-index: 100;
 
   h1 {
     &:hover {
